manifests/jenkins-aws-secret/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: lrcsdp.support.cf-cd.com
      http:
        paths:
          - path: /jenkins
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
#            pathType: Prefix
